--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -82,4 +82,12 @@
         font-size: 35px;
         line-height: 48.5px;
     }
+
+    .app__specialMenu-menu_items {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        width: 100%;
+    }
+    
 }
